--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
@@ -213,6 +213,9 @@
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.SAP_Platina)
                                                     </th>
+                                                     <th>
+                                                        @Html.DisplayNameFor(model => model.SAP_Platina_2)
+                                                    </th>
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.Tipo_de_Material)
                                                     </th>
@@ -368,6 +371,9 @@
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.SAP_Platina)
+                                                    </td> 
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.SAP_Platina_2)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.Tipo_de_Material)
