2022-08-11 Se modifica agrega info platina general a reporte de producción.

--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/BusquedaRegistro.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/BusquedaRegistro.cshtml
@@ -159,6 +159,9 @@
                                                 @Html.DisplayNameFor(model => model.sap_platina)
                                             </th>
                                             <th>
+                                                @Html.DisplayNameFor(model => model.sap_platina_2)
+                                            </th>
+                                            <th>
                                                 @Html.DisplayNameFor(model => model.sap_rollo)
                                             </th>
                                             <th>
@@ -218,6 +221,9 @@
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.sap_platina)
+                                            </td>
+                                             <td>
+                                                @Html.DisplayFor(modelItem => item.sap_platina_2)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.sap_rollo)
