--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
@@ -320,9 +320,9 @@
                                         <span class="field-validation-valid text-danger" data-valmsg-for="select_@contador" data-valmsg-replace="true"></span>
                                     </div>
                                     @*<div class="col-md-2">
-                        <input style="text-align:right" type="text" maxlenght=30 name="produccion_lotes[@contador].sap_platina" id="produccion_lotes[@contador].sap_platina" class="form-control col-md-12 material-lote" value="@lote.sap_platina" readonly required>
-                        <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].sap_platina" data-valmsg-replace="true"></span>
-                    </div>*@
+                                            <input style="text-align:right" type="text" maxlenght=30 name="produccion_lotes[@contador].sap_platina" id="produccion_lotes[@contador].sap_platina" class="form-control col-md-12 material-lote" value="@lote.sap_platina" readonly required>
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].sap_platina" data-valmsg-replace="true"></span>
+                                        </div>*@
 
                                     <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_izquierdo">
                                         <span class="float-right">Lote Izquierdo</span>
@@ -422,13 +422,28 @@
                                 @Html.EditorFor(model => model.produccion_datos_entrada.total_piezas_ajuste, new { htmlAttributes = new { @class = "form-control col-md-12", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.produccion_datos_entrada.total_piezas_ajuste, "", new { @class = "text-danger" })
                             </div>
+                            @if (!String.IsNullOrEmpty(Model.sap_platina_2))
+                            {
+                                @Html.LabelFor(model => model.produccion_datos_entrada.total_piezas_ajuste_platina_2, new { @class = "control-label col-md-1" })
+                                <div class="col-md-2">
+                                    @Html.EditorFor(model => model.produccion_datos_entrada.total_piezas_ajuste_platina_2, new { htmlAttributes = new { @class = "form-control col-md-12", @readonly = "readonly" } })
+
+                                </div>
+                            }
+                            <!--Suma de piezas de ajuste-->
+                            <label class="control-label col-md-1" for="suma_piezas_de_ajuste">
+                                Suma piezas de Ajuste
+                            </label>
+                            <div class="col-md-2">
+                                <input type="text" id="suma_piezas_de_ajuste" class="form-control col-md-12" value="" readonly>
+                            </div>
                             <!--Peso Bruto Kgs-->
                             @*<label class="control-label col-md-1" for="peso_bruto_kgs">
-                Peso Bruto Kgs
-            </label>
-            <div class="col-md-3">
-                <input type="text" id="peso_bruto_kgs" class="form-control col-md-12" value="" readonly>
-            </div>*@
+                                    Peso Bruto Kgs
+                                </label>
+                                <div class="col-md-3">
+                                    <input type="text" id="peso_bruto_kgs" class="form-control col-md-12" value="" readonly>
+                                </div>*@
                         </div>
 
                         <div class="ln_solid"></div>
@@ -436,16 +451,16 @@
                             <ol class="breadcrumb" style="background-color: #e7f5fb; justify-content: center;">
                                 <li class="breadcrumb-item active" aria-current="page" style="color:#2a2a2a">
                                     @*<i class="fa-solid fa-left-long"></i>
-                    @for (int i = 0; i <= 5; i++)
-                    {
-                        <i class="fa-solid fa-minus"></i>
-                    }*@
+                                        @for (int i = 0; i <= 5; i++)
+                                        {
+                                            <i class="fa-solid fa-minus"></i>
+                                        }*@
                                     <b> PESOS PLATINA 1 (@Model.sap_platina)</b>
                                     @*@for (int i = 0; i <= 5; i++)
-                    {
-                        <i class="fa-solid fa-minus"></i>
-                    }
-                    <i class="fa-solid fa-right-long"></i>*@
+                                        {
+                                            <i class="fa-solid fa-minus"></i>
+                                        }
+                                        <i class="fa-solid fa-right-long"></i>*@
                                 </li>
                             </ol>
                         </nav>
@@ -476,6 +491,9 @@
                             <thead>
                                 <tr>
                                     <th>
+                                        Piezas de ajuste
+                                    </th>
+                                    <th>
                                         Peso Bruto Kgs
                                     </th>
                                     <th>
@@ -500,6 +518,8 @@
                             </thead>
                             <tbody>
                                 <tr id="fila_balance_scrap">
+                                    <td id="td_piezas_de_ajuste">
+                                    </td>
                                     <td id="td_peso_bruto_kgs">
                                     </td>
                                     <td id="td_peso_real_pieza_bruto">
@@ -539,7 +559,7 @@
                                         Peso Bruto Total piezas Kg
                                     </th>
                                     <th>
-                                        Peso bruto Total piezas
+                                        Peso Neto Total piezas
                                         Kg
                                     </th>
                                     <th>
@@ -626,6 +646,9 @@
                                 <thead>
                                     <tr>
                                         <th>
+                                            Piezas de ajuste
+                                        </th>
+                                        <th>
                                             Peso Bruto Kgs
                                         </th>
                                         <th>
@@ -651,6 +674,8 @@
                                 <tbody>
 
                                     <tr id="fila_balance_scrap_2">
+                                        <td id="td_piezas_de_ajuste_2">
+                                        </td>
                                         <td id="td_peso_bruto_kgs_2">
                                         </td>
                                         <td id="td_peso_real_pieza_bruto_2">
@@ -691,7 +716,7 @@
                                             Peso Bruto Total piezas Kg
                                         </th>
                                         <th>
-                                            Peso bruto Total piezas
+                                            Peso Neto Total piezas
                                             Kg
                                         </th>
                                         <th>
