--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
@@ -136,6 +136,9 @@
                                                             @Html.DisplayNameFor(model => model.sap_platina)
                                                         </th>
                                                         <th>
+                                                            @Html.DisplayNameFor(model => model.sap_platina_2)
+                                                        </th>
+                                                        <th>
                                                             @Html.DisplayNameFor(model => model.sap_rollo)
                                                         </th>
                                                         <th>
@@ -170,6 +173,9 @@
 
                                                             <td>
                                                                 @Html.DisplayFor(modelItem => item.sap_platina)
+                                                            </td> 
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.sap_platina_2)
                                                             </td>
                                                             <td>
                                                                 @Html.DisplayFor(modelItem => item.sap_rollo)
