--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
@@ -176,6 +176,8 @@
                             @Html.HiddenFor(model => model.produccion_datos_entrada.lote_rollo)
                             @Html.HiddenFor(model => model.produccion_datos_entrada.peso_etiqueta)
                             @Html.HiddenFor(model => model.produccion_datos_entrada.ordenes_por_pieza)
+                            @Html.HiddenFor(model => model.produccion_datos_entrada.orden_sap_2)
+                            @Html.HiddenFor(model => model.produccion_datos_entrada.peso_real_pieza_neto_platina_2)
 
                             @*Campos para la búsqueda*@
                            
@@ -268,12 +270,14 @@
                             </div>
 
 
-                            <div class="form-group row">
+                            <div class="form-group">
 
                                 <div class="ln_solid"></div>
                                 <div class="item form-group">
-                                    <div class="col-md-12 col-sm-12 offset-md-12">
-                                        <button type="submit" class="btn btn-success btn-lg float-lg-right">Guardar</button>
+                                    <div class="col-md-10 col-sm-10">
+                                    </div>
+                                    <div class="col-md-2 col-sm-2">
+                                        <button type="submit" class="btn btn-success btn-lg">Guardar</button>
                                     </div>
                                 </div>
 
