--- a/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/Index.cshtml
@@ -96,6 +96,10 @@
                                                 <div class="col-md-3 col-sm-3 ">
                                                     @Html.DropDownList("id_empleado", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="active" style="text-align:right">¿Tiene Documento?:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    @Html.DropDownList("documento", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
                                             </div>
                                             <div class="form-group row ">
                                                 <label class="control-label col-md-1 col-sm-1" for="id_it_inventory_item" style="text-align:right">Equipo:</label>
@@ -107,8 +111,9 @@
                                                     @Html.DropDownList("estatus_mantenimiento", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
                                             </div>
+                                            <div class="ln_solid"></div>
                                             <div class="form-group row">
-                                                <div class="col-md-8 col-sm-8">
+                                                <div class="col-md-6 col-sm-6">
 
                                                 </div>
                                                 <div class="col-md-2 col-sm-2">
@@ -143,7 +148,10 @@
                                                     @Html.DisplayNameFor(model => model.estatus)
                                                 </th>
                                                 <th>
-                                                    Progreso
+                                                    Documento
+                                                </th>
+                                                <th>
+                                                    Checklist
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_empleado_responsable)
@@ -170,10 +178,11 @@
                                                         }
                                                         @if (item.estatus == Bitacoras.Util.IT_matenimiento_Estatus.REALIZADO)
                                                         {
-                                                            <a href="@Url.Action("GenerarPDF", null, new { id = item.id })" class="btn btn-danger btn-sm" title="Generar Plantilla">
+
+                                                            <a href="@Url.Action("GenerarPDF", null, new { id = item.id })" class="btn btn-danger btn-sm" title="Generar Plantilla" target="_blank">
                                                                 <i class="fa-solid fa-file-pdf"></i>
                                                             </a>
-                                                            <a href="@Url.Action("SubirPlantilla", null, new { id = item.id })" class="btn btn-primary btn-sm" title="Generar Plantilla">
+                                                            <a href="@Url.Action("CargarDocumento", null, new { id = item.id })" class="btn btn-primary btn-sm" title="Cargar Documento Firmado">
                                                                 <i class="fa-solid fa-arrow-up-from-bracket"></i>
                                                             </a>
                                                         }
@@ -181,6 +190,7 @@
                                                         <a href="@Url.Action("Details", null, new { id = item.id })" class="btn btn-secondary btn-sm" title="Detalles">
                                                             <i class="fa-solid fa-circle-info"></i>
                                                         </a>
+
                                                     </td>
 
                                                     <td>
@@ -196,6 +206,21 @@
                                                         @Bitacoras.Util.IT_matenimiento_Estatus.DescripcionStatus(item.estatus)
                                                     </td>
                                                     <td>
+                                                        @if (item.id_biblioteca_digital.HasValue)
+                                                        {
+                                                            <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = item.id_biblioteca_digital, inline = true })" class="btn btn-info btn-sm" target="_blank" title="Ver">
+                                                                <i class="fa-regular fa-eye"></i>
+                                                            </a>
+                                                            <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = item.id_biblioteca_digital })" class="btn btn-success btn-sm" title="Descargar">
+                                                                <i class="fa fa-download"></i>
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span style="font-weight:bold; color:red">PENDIENTE</span>
+                                                        }
+                                                    </td>
+                                                    <td>
                                                         @if (item.IT_mantenimientos_rel_checklist.Count() == 0)
                                                         {
                                                             @("Sin iniciar")
@@ -209,6 +234,7 @@
                                                             </div>
                                                         }
                                                     </td>
+
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
                                                     </td>
@@ -285,7 +311,7 @@
             //    table_doc = $('#datatable_1').DataTable();
 
             //    setTimeout(function () {
-                    
+
             //        clicMenu(2);
             //    }, 100);
 
